--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="d-flex justify-content-start">
+    <div id="app" class="d-flex flex-column"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
